{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 18,
  "lineage": "dac8081b-d77d-2769-6197-a2065341c2f8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c587d11c0a52bfbf",
            "arn": "arn:aws:ec2:us-west-2:728618190046:instance/i-0e8c84dc02bb2e13f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8c84dc02bb2e13f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "task",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d19e021f99ff659b"
              }
            ],
            "primary_network_interface_id": "eni-0d19e021f99ff659b",
            "private_dns": "ip-10-0-0-227.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.227",
            "public_dns": "ec2-35-163-102-212.us-west-2.compute.amazonaws.com",
            "public_ip": "35.163.102.212",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d2956d169b12911f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd0fd2717cbe4024",
            "tags": {
              "Name": "UbuntuServer"
            },
            "tags_all": {
              "Name": "UbuntuServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-018699dd0177d423c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "728618190046",
            "id": "i-0e8c84dc02bb2e13f",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_key_pair.example",
            "aws_security_group.webSg",
            "aws_subnet.sub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:728618190046:internet-gateway/igw-0bf57a11804ee670c",
            "id": "igw-0bf57a11804ee670c",
            "owner_id": "728618190046",
            "region": "us-west-2",
            "vpc_id": "vpc-046a905f5f80ef9bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:728618190046:route-table/rtb-07a6b32ebf648f040",
            "id": "rtb-07a6b32ebf648f040",
            "owner_id": "728618190046",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bf57a11804ee670c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-046a905f5f80ef9bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "728618190046",
            "id": "rtb-07a6b32ebf648f040",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0819dee902a231567",
            "region": "us-west-2",
            "route_table_id": "rtb-07a6b32ebf648f040",
            "subnet_id": "subnet-0cd0fd2717cbe4024"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.RT",
            "aws_subnet.sub1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webSg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:728618190046:security-group/sg-018699dd0177d423c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018699dd0177d423c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "728618190046",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-046a905f5f80ef9bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "728618190046",
            "id": "sg-018699dd0177d423c",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:728618190046:subnet/subnet-0cd0fd2717cbe4024",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd0fd2717cbe4024",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "728618190046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "PublicSubnet"
            },
            "tags_all": {
              "Name": "PublicSubnet"
            },
            "vpc_id": "vpc-046a905f5f80ef9bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "728618190046",
            "id": "subnet-0cd0fd2717cbe4024",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:728618190046:vpc/vpc-046a905f5f80ef9bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07c6ced2e37420240",
            "default_route_table_id": "rtb-0352d6fbd20a54d42",
            "default_security_group_id": "sg-0c8dc3acb3fdeb2ae",
            "dhcp_options_id": "dopt-0b6016eaa1b48ceb3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-046a905f5f80ef9bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0352d6fbd20a54d42",
            "owner_id": "728618190046",
            "region": "us-west-2",
            "tags": {
              "Name": "MyVPC"
            },
            "tags_all": {
              "Name": "MyVPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "728618190046",
            "id": "vpc-046a905f5f80ef9bb",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}